# Nova-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/nova_agent/: brain.py  config.py  executor.py  main.py  memory.py  settings.py  tools.py  ui.py
src/nova_agent/prompts/: system_persona.md
